# wizards-engine

./: .gitignore  BACKEND_HANDOFF.md  README.md  VIEWER_ROLE_HANDOFF.md  alembic.ini  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: human-docs.md  new-domain.md  status.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  02a420cce9eb_add_check_constraints_to_enum_columns_.py  8f6942c5aca7_add_proposal_revision_count.py  (+4 more)
campaign-data/: README.md  VERIFICATION.md  meta.yaml
docs/: README.md  campaign-format.md  deployment.md  getting-started.md  gm-guide.md  player-guide.md
spec/: MASTER.md  glossary.md  walkthrough.md
tests/: conftest.py  fixtures.py  test_api_conventions.py  test_app.py  test_auth_middleware.py  test_bond_charges.py  test_bond_display.py  test_bond_distance.py  test_bond_service.py  test_bond_stress.py  test_campaign_cli.py  test_campaign_exporter.py  test_campaign_importer.py  test_campaign_resolver.py  test_campaign_roundtrip.py  test_campaign_schemas.py  test_campaign_validators.py  test_character_detail.py  test_characters.py  test_characters_summary.py  test_clocks.py  test_db.py  test_direct_actions_6_2_3_6_2_4.py  test_downtime_actions.py  test_event_service.py  test_events_api.py  test_events_api_sort_denorm.py  test_example.py  test_feed.py  test_feed_edge_cases.py  test_feed_personal.py  test_find_time.py  test_fixture_isolation.py  test_gaps.py  test_gm_actions_batch.py  test_gm_actions_character.py  test_gm_actions_entities.py  test_gm_actions_world.py  test_gm_character.py  test_gm_dashboard.py  (+49 more)
(+285 files in other folders)
