[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wizards-engine"
version = "0.1.0"
description = "Backend state tracker for a narrative TTRPG campaign"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<0.200",
    "uvicorn[standard]>=0.29,<0.40",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "python-ulid>=2.2,<3.0",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.30",
    "httpx>=0.27,<0.30",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
